# earth_rover_mini_plus_sdk

./: Authors.txt  README.md  pyproject.toml
src/: api.py
src/earth_rover_mini_plus_sdk/: __init__.py  api.py
src/earth_rover_mini_sdk/: __init__.py  api.py  uart_cp.py
